Changes in Release 1.2.1
==============================================
[JXT-30] - Fix some minor race conditions in BasicParserPool
[JXT-46] - Thrown under moderate load: org.xml.sax.SAXException: FWK005 parse may not be called while parsing.
[JXT-49] - Remove some inconsistent (and non-functional) logic in BasicParserPool
[JXT-50] - Update libs for 1.2.1 release
[JXT-51] - In BasicParserPool, avoid throwing an EmptyStackException on empty cache case

Changes in Release 1.2
==============================================
[JXT-43] - Add some additional security related helper methods
[JXT-44] - Optimize use of Collections 

Changes in Release 1.1.1
==============================================
Updated logging libraries in order to grab some bug fixes


Changes in Release 1.1.0
==============================================
[JXT-7]  - Support extraction of certificate URI subject alt names which have non-URL values
[JXT-31] - Add BaseXMLObjectMarshaller and BaseXMLObjectUnmarshaller classes that provide no-op implementations of the 
           methods on the AbstractXMLObjectMarshaller and AbstractXMLObjectUnmarshaller classes.
[JXT-32] - XMLHelper adoptElement should check success of node adoption
[JXT-34] - Upgrade to Apache XML Security lib 1.4.2
[JXT-35] - Upgrade to SLF4J 1.5.2
[JXT-36] - Upgrade to Bouncy Castle 1.40
[JXT-37] - NPE is thrown if X509KeyInfoGeneratorFactory is set to emit certs or CRLs but none are present in the generator
[JXT-38] - XMLHelper.prettyPrintXML write the entire document not just the node passed in as an argument
[JXT-39] - Add version information in library JAR manifest and provide command line tool to view it
[JXT-40] - Provide options to influence PKIX trust evaluation processing behavior
[JXT-41] - CRL in Signature of Metadata is not processed when using PKIX path validation